--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "rm -rf dist && tsc && node ./dist/app.js",
+    "start": "tsc && node ./dist/app.js",
     "debug": "export DEBUG=* && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'tests/**/*.test.ts'"
   },
   "author": "",
   "license": "ISC",
@@ -20,11 +20,18 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.15",
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.2",
     "@types/shortid": "^0.0.29",
+    "@types/supertest": "^2.0.10",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "source-map-support": "^0.5.19",
+    "supertest": "^6.1.3",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
   }
