--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./dist/app.js",
+    "build": "tsc",
     "debug": "export DEBUG=* && npm run start",
     "test": "mocha -r ts-node/register 'tests/**/*.test.ts'"
   },
