--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.27.1",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "express-winston": "^4.1.0",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.1",
     "shortid": "^2.2.16",
     "winston": "^3.3.3"
   },
@@ -24,7 +30,10 @@
     "@types/chai": "^4.2.15",
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mocha": "^8.2.2",
     "@types/shortid": "^0.0.29",
     "@types/supertest": "^2.0.10",
