--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./dist/app.js",
-    "build": "tsc",
-    "debug": "export DEBUG=* && npm run start",
-    "test": "mocha -r ts-node/register 'tests/**/*.test.ts'"
+    "debug": "export DEBUG=* && npm start",
+    "test": "mocha -r ts-node/register 'tests/**/*.test.ts'",
+    "test-debug": "export DEBUG=* && npm test"
   },
   "author": "",
   "license": "ISC",
