--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "rest-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node ./dist/app.js",
     "debug": "export DEBUG=* && npm start",
     "test": "mocha -r ts-node/register 'tests/**/*.test.ts'",
-    "test-debug": "export DEBUG=* && npm test"
+    "test-debug": "export DEBUG=* && npm test",
+    "test-dev": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register tests/**/*.test.ts\"",
+    "dev": "node ./dist/app.js",
+    "dev2": "nodemon --watch . --ext ts --exec \"docker-compose build && docker-compose up\""
   },
   "author": "",
   "license": "ISC",
@@ -39,6 +42,7 @@
     "@types/supertest": "^2.0.10",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
+    "nodemon": "^2.0.7",
     "source-map-support": "^0.5.19",
     "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
