--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,5 +62,7 @@
 
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "include": ["app/**/*.ts"],
+  "exclude": ["node_modules", "tests/**/*.ts"]
 }
